--- a/app/src/main/res/layout/activity_schedule.xml
+++ b/app/src/main/res/layout/activity_schedule.xml
@@ -77,7 +77,7 @@
                     android:textSize="18dp"
                     android:layout_weight="2.5"/>
                 <EditText
-                    android:id="@+id/sd_tv_from_province"
+                    android:id="@+id/sd_edt_from_province"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1" />
@@ -94,7 +94,7 @@
                     android:textSize="18dp"
                     android:layout_weight="2.5"/>
                 <EditText
-                    android:id="@+id/sd_tv_from_district"
+                    android:id="@+id/sd_edt_from_district"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1" />
@@ -111,7 +111,7 @@
                     android:textSize="18dp"
                     android:layout_weight="2.5"/>
                 <EditText
-                    android:id="@+id/sd_tv_from_commune"
+                    android:id="@+id/sd_edt_from_commune"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1" />
@@ -128,7 +128,7 @@
                     android:textSize="18dp"
                     android:layout_weight="2.5"/>
                 <EditText
-                    android:id="@+id/sd_tv_from_exact_location"
+                    android:id="@+id/sd_edt_from_exact_location"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1" />
@@ -147,7 +147,7 @@
                 android:textSize="18dp"
                 android:layout_weight="2.5"/>
             <EditText
-                android:id="@+id/sd_tv_start_time"
+                android:id="@+id/sd_edt_start_time"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1" />
@@ -166,7 +166,7 @@
                 android:layout_weight="2.5"
                 android:textColor="@color/colorBlack"/>
             <EditText
-                android:id="@+id/sd_tv_finish_time"
+                android:id="@+id/sd_edt_finish_time"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1" />
@@ -187,7 +187,7 @@
             android:textColor="@color/colorBlack"
             android:textSize="18dp" />
         <EditText
-            android:id="@+id/sd_tv_price"
+            android:id="@+id/sd_edt_price"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1" />
@@ -226,7 +226,7 @@
                     android:layout_weight="2.5"
                     android:textColor="@color/colorBlack"/>
                 <EditText
-                    android:id="@+id/sd_tv_to_province"
+                    android:id="@+id/sd_edt_to_province"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1" />
@@ -244,7 +244,7 @@
                     android:layout_weight="2.5"
                     android:textColor="@color/colorBlack"/>
                 <EditText
-                    android:id="@+id/sd_tv_to_district"
+                    android:id="@+id/sd_edt_to_district"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1" />
@@ -262,7 +262,7 @@
                     android:layout_weight="2.5"
                     android:textColor="@color/colorBlack"/>
                 <EditText
-                    android:id="@+id/sd_tv_to_commune"
+                    android:id="@+id/sd_edt_to_commune"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1" />
@@ -280,7 +280,7 @@
                     android:layout_weight="2.5"
                     android:textColor="@color/colorBlack"/>
                 <EditText
-                    android:id="@+id/sd_tv_to_exact_location"
+                    android:id="@+id/sd_edt_to_exact_location"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1" />
@@ -288,16 +288,29 @@
         </LinearLayout>
     </LinearLayout>
 
+   <RelativeLayout
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content">
+       <Button
+           android:id="@+id/sd_btn_finish"
+           android:layout_centerVertical="true"
+           android:text="@string/finish"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"/>
+
+       <com.google.android.material.floatingactionbutton.FloatingActionButton
+           android:layout_width="wrap_content"
+           android:layout_alignParentEnd="true"
+           android:layout_height="wrap_content"
+           android:tint="@color/colorWhite"
+           android:id="@+id/sd_fbtn_add"
+           android:src="@android:drawable/ic_input_add"
+           android:layout_gravity="end"
+           android:layout_margin="5dp"/>
+
+   </RelativeLayout>
 
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:tint="@color/colorWhite"
-        android:id="@+id/sd_fbtn_save"
-        android:src="@android:drawable/ic_input_add"
-        android:layout_gravity="end"
-        android:layout_margin="5dp"/>
 </LinearLayout>
 
 
