--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -11,6 +11,11 @@
         android:label="@string/customer"
         tools:layout="@layout/fragment_customer"/>
     <fragment
+        android:id="@+id/nav_schedule"
+        android:name="com.its.camcar.ui.schedule.ScheduleFragment"
+        android:label="@string/schedule"
+        tools:layout="@layout/fragment_schedule"/>
+    <fragment
         android:id="@+id/nav_company"
         android:name="com.its.camcar.ui.company.CompanyFragment"
         android:label="@string/company"
