--- a/app/src/main/res/layout/schedule_view_holder.xml
+++ b/app/src/main/res/layout/schedule_view_holder.xml
@@ -35,7 +35,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
         <TextView
-            android:id="@+id/shv_tv_price"
+            android:id="@+id/svh_tv_price"
             android:text="@string/price"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
