--- a/app/src/main/res/layout/schedule_view_holder.xml
+++ b/app/src/main/res/layout/schedule_view_holder.xml
@@ -1,43 +1,150 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:layout_width="match_parent"
+    android:background="?android:attr/selectableItemBackground"
     android:layout_margin="10dp"
     android:padding="10dp"
-    android:layout_height="150dp">
-    <ImageView
-        android:src="@drawable/side_nav_bar"
-        android:layout_width="50dp"
-        android:layout_height="50dp"/>
-    <LinearLayout
-        android:paddingLeft="10dp"
-        android:orientation="vertical"
+    android:layout_height="wrap_content">
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <TextView
-            android:id="@+id/svh_tv_start"
-            android:text="@string/start"
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-        <TextView
-            android:id="@+id/svh_tv_arrive"
-            android:text="@string/arrive"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-        <TextView
-            android:id="@+id/svh_tv_start_time"
-            android:text="@string/starttime"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-        <TextView
-            android:id="@+id/svh_tv_arrive_time"
-            android:text="@string/arrivetime"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-        <TextView
-            android:id="@+id/svh_tv_price"
-            android:text="@string/price"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-    </LinearLayout>
+            android:layout_height="wrap_content">
+            <LinearLayout
+                android:padding="10dp"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:baselineAligned="false">
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:gravity="center"
+                        android:textAllCaps="true"
+                        android:text="@string/start_time"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+                    <TextView
+                        android:id="@+id/svh_tv_start_time"
+                        android:textStyle="bold"
+                        android:layout_marginTop="5dp"
+                        android:gravity="center"
+                        android:textAllCaps="true"
+                        android:text="@string/simple_time"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:gravity="center"
+                        android:textAllCaps="true"
+                        android:text="@string/arrive_time"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+                    <TextView
+                        android:id="@+id/svh_tv_arrive_time"
+                        android:textStyle="bold"
+                        android:layout_marginTop="5dp"
+                        android:gravity="center"
+                        android:textAllCaps="true"
+                        android:text="@string/simple_time"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:gravity="center"
+                        android:textAllCaps="true"
+                        android:text="@string/price"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+                    <TextView
+                        android:id="@+id/svh_tv_price"
+                        android:textStyle="bold"
+                        android:textColor="@color/colorPrimaryDark"
+                        android:gravity="center"
+                        android:textSize="20sp"
+                        android:text="@string/_100"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
+            </LinearLayout>
+            <View
+                android:background="@color/colorPrimary"
+                android:layout_marginTop="5dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"/>
+            <LinearLayout
+                android:layout_marginTop="5dp"
+                android:padding="10dp"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:textStyle="bold"
+                    android:textAllCaps="true"
+                    android:gravity="center_vertical"
+                    android:text="@string/start"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"/>
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <ImageView
+                        android:padding="15dp"
+                        android:src="@drawable/ic_start_location"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"/>
+                    <TextView
+                        android:id="@+id/svh_tv_start"
+                        android:gravity="center_vertical"
+                        android:text="@string/start"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"/>
+                </LinearLayout>
+                <TextView
+                    android:textStyle="bold"
+                    android:textAllCaps="true"
+                    android:gravity="center_vertical"
+                    android:text="@string/destination"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"/>
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <ImageView
+                        android:padding="15dp"
+                        android:src="@drawable/ic_start_location"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"/>
+                    <TextView
+                        android:id="@+id/svh_tv_arrive"
+                        android:gravity="center_vertical"
+                        android:text="@string/arrive"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"/>
+                </LinearLayout>
+            </LinearLayout>
+
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
