--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -18,6 +18,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
     <EditText
+        android:inputType="textEmailAddress"
+        android:id="@+id/edt_email"
+        android:padding="10dp"
+        android:background="@drawable/login_edt_background"
+        android:layout_marginTop="10dp"
+        android:hint="@string/phone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+    <EditText
         android:inputType="phone"
         android:id="@+id/edt_phone"
         android:padding="10dp"
