--- a/app/src/main/res/layout/customer_result_view_holder.xml
+++ b/app/src/main/res/layout/customer_result_view_holder.xml
@@ -22,6 +22,7 @@
                 android:layout_width="0dp"
                 android:layout_height="50dp"/>
             <TextView
+                android:id="@+id/crvh_tv_driver_name"
                 android:gravity="center_vertical"
                 android:text="@string/driver"
                 android:layout_weight="4"
@@ -52,6 +53,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
                 <TextView
+                    android:id="@+id/crvh_tv_start_time"
                     android:textStyle="bold"
                     android:layout_marginTop="5dp"
                     android:gravity="center"
@@ -72,6 +74,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
                 <TextView
+                    android:id="@+id/crvh_tv_arrive_time"
                     android:textStyle="bold"
                     android:layout_marginTop="5dp"
                     android:gravity="center"
@@ -92,6 +95,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
                 <TextView
+                    android:id="@+id/crvh_tv_price"
                     android:textStyle="bold"
                     android:textColor="@color/colorPrimaryDark"
                     android:gravity="center"
@@ -123,6 +127,7 @@
                 android:layout_width="50dp"
                 android:layout_height="match_parent"/>
             <TextView
+                android:id="@+id/crvh_tv_phone"
                 android:textSize="16sp"
                 android:text="@string/phone"
                 android:gravity="center_vertical"
