--- a/app/src/main/res/layout/fragment_customer_history.xml
+++ b/app/src/main/res/layout/fragment_customer_history.xml
@@ -3,14 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.customer_history.CustomerHistoryFragment">
 
-    <TextView
-        android:textSize="45sp"
+    <androidx.recyclerview.widget.RecyclerView
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        android:id="@+id/fch_rc_history"
         android:layout_width="match_parent"
-        android:gravity="center"
-        android:text="@string/history"
         android:layout_height="match_parent"/>
-
-
 </FrameLayout>
