--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -23,7 +23,7 @@
         android:padding="10dp"
         android:background="@drawable/login_edt_background"
         android:layout_marginTop="10dp"
-        android:hint="@string/phone"
+        android:hint="@string/email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
     <EditText
